--- a/resources/default.css
+++ b/resources/default.css
@@ -1,6 +1,41 @@
+ul#footericons {
+    padding-inline-start: 0px;
+}
+
+ul#footericons li {
+    display: inline;
+    margin-left: 7px;
+    white-space: nowrap;
+}
+
+ul#footerlinks {
+    padding-inline-start: 0px;
+}
+
+ul#footerlinks li {
+    display: inline;
+    margin-left: 7px;
+    white-space: nowrap;
+}
+
+ul#infolinks {
+    padding-inline-start: 0px;
+}
+
+ul#infolinks li {
+    display: inline;
+    margin-left: 7px;
+    white-space: nowrap;
+}
+
+ul#personaltools {
+    padding-inline-start: 0px;
+}
+
 ul#personaltools li {
     display: inline;
-    margin-left: 10px;
+    margin-left: 7px;
+    white-space: nowrap;
 }
 
 .mw-editsection {
