--- a/resources/bootstrap-colorfix.css
+++ b/resources/bootstrap-colorfix.css
@@ -6,6 +6,10 @@ a:visited  {
     color: #2a9fd6 !important;
 }
 
+a.new:visited  {
+    color: #ba0000 !important;
+}
+
 .catlinks {
     border: 1px solid grey !important;
     background-color: rgba(255, 255, 255, 0.075) !important;
